--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "javascript practice",
   "main": "index",
   "dependencies": {
+    "browser-sync": "^2.16.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-ruby-sass": "^2.1.0",
     "gulp-uglify": "^2.0.0",
-    "browser-sync": "^2.16.0"
+    "zepto": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
