--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-ruby-sass": "^2.1.0",
     "gulp-uglify": "^2.0.0",
     "handlebars": "^4.0.5",
+    "mocha": "^3.2.0",
     "mustache": "^2.3.0",
     "underscore": "^1.8.3",
     "zepto": "^1.2.0"
