--- a/src/js/dashboard/demo/package.json
+++ b/src/js/dashboard/demo/package.json
@@ -20,5 +20,9 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.8.0"
+  },
+  "dependencies": {
+    "es6-promise": "^4.1.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
